--- a/INTRO/abc.html
+++ b/INTRO/abc.html
@@ -1,8 +1,40 @@
 <html>
-    <head>
+    <head> 
+        <title>
+            My first web page wohoooooooo!
+        </title>
 
     </head>
-    <body> 
+
+    <body>
+        <h1>
+            HELOO 
+        </h1> 
+        <h2>
+            babumoshai
+        </h2>
+        <h3>
+            kese hai aap
+        </h3>
+        <h4>
+            sab badhiya
+        </h4>
+        <h5>
+            lunch kar liya
+        </h5>
+        <h6>
+            chalo ji bye bye
+        </h6>
+        <p>
+            Lorem <pre> waah jii waah 
+               <strong> baleeee balee </strong>         
+                              <em>di shawa</em>                     
+                                        <u>shawa </u>
+            </pre> ipsum dolor sit amet consectetur adipisicing elit.<br> Similique molestias necessitatibus blanditiis explicabo omnis, eum doloribus aperiam aut illo, veniam eaque provident voluptatem? Nihil placeat provident ratione perspiciatis non numquam reprehenderit reiciendis?
+        </p>
+
+        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRxaXglYQ7hSXvbVAUEuCkpt4zgwI8u3mEJew&s">
+
         
     </body>
 </html>
