--- a/INTRO/website.html
+++ b/INTRO/website.html
@@ -1,112 +1,58 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>1st website</title>
-    <style>
-    .container {
-      max-width: 900px;
-      margin: auto;
-      background: #ffffff;
-      padding: 20px;
-      border-radius: 4px;
-    }
-
-    h1 {
-      margin-top: 0;
-      font-size: 26px;
-    }
-
-    .subtitle {
-      color: #555;
-      margin-bottom: 20px;
-    }
-
-    .row {
-      display: flex;
-      gap: 20px;
-      margin-bottom: 30px;
-    }
-
-    .card {
-      flex: 1;
-      border: 1px solid #ddd;
-      border-radius: 4px;
-      overflow: hidden;
-      background: #fafafa;
-    }
-
-    .card-header {
-      background: #2f6fa3;
-      color: #fff;
-      padding: 10px;
-      font-weight: bold;
-    }
-
-    .card-body {
-      padding: 12px;
-      font-size: 14px;
-    }
-
-    code {
-      display: block;
-      background: #eee;
-      padding: 6px;
-      margin: 6px 0;
-      border-radius: 3px;
-      font-family: Consolas, monospace;
-    }
-
-    .section-title {
-      font-size: 20px;
-      margin-bottom: 15px;
-    }
-
-    .footer {
-      text-align: right;
-      margin-top: 20px;
-    }
-
-    .button {
-      background: #2f6fa3;
-      color: #fff;
-      padding: 10px 14px;
-      text-decoration: none;
-      border-radius: 4px;
-      font-size: 14px;
-    }
-
-    </style>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>1st website</title>
 </head>
 
-<body>
+<body style="margin:0; font-family: Arial, sans-serif; background:#f4f4f4;">
 
-   <div class="container">
-    <h1>HTML Basics: Tags and Lists</h1>
-    <p class="subtitle">Learn about basic HTML tags and how to create lists on your webpage.</p>
+  <div style="max-width:900px; margin:auto; background:#ffffff; padding:20px; border-radius:4px;">
 
-    <div class="row">
-      <div class="card">
-        <div class="card-header">HTML Tags</div>
-        <div class="card-body">
+    <h1 style="margin-top:0; font-size:26px;">
+      HTML Basics: Tags and Lists
+    </h1>
+
+    <p style="color:#555; margin-bottom:20px;">
+      Learn about basic HTML tags and how to create lists on your webpage.
+    </p>
+
+    <!-- First Row -->
+    <div style="display:flex; gap:20px; margin-bottom:30px;">
+
+      <div style="flex:1; border:1px solid #ddd; border-radius:4px; overflow:hidden; background:#fafafa;">
+        <div style="background:#2f6fa3; color:#fff; padding:10px; font-weight:bold;">
+          HTML Tags
+        </div>
+        <div style="padding:12px; font-size:14px;">
           <p>HTML tags are the building blocks of a webpage.</p>
-          <code>&lt;h1&gt; Heading Tag &lt;/h1&gt;</code>
-          <code>&lt;p&gt; This is a paragraph. &lt;/p&gt;</code>
+          <code style="display:block; background:#eee; padding:6px; margin:6px 0; border-radius:3px; font-family:Consolas, monospace;">
+            &lt;h1&gt; Heading Tag &lt;/h1&gt;
+          </code>
+          <code style="display:block; background:#eee; padding:6px; margin:6px 0; border-radius:3px; font-family:Consolas, monospace;">
+            &lt;p&gt; This is a paragraph. &lt;/p&gt;
+          </code>
         </div>
       </div>
 
-      <div class="card">
-        <div class="card-header">Paragraph Tags</div>
-        <div class="card-body">
+      <div style="flex:1; border:1px solid #ddd; border-radius:4px; overflow:hidden; background:#fafafa;">
+        <div style="background:#2f6fa3; color:#fff; padding:10px; font-weight:bold;">
+          Paragraph Tags
+        </div>
+        <div style="padding:12px; font-size:14px;">
           <p>Use the <strong>&lt;p&gt;</strong> tag to add paragraphs to your content.</p>
-          <code>&lt;p&gt;This is a paragraph.&lt;/p&gt;</code>
+          <code style="display:block; background:#eee; padding:6px; margin:6px 0; border-radius:3px; font-family:Consolas, monospace;">
+            &lt;p&gt;This is a paragraph.&lt;/p&gt;
+          </code>
         </div>
       </div>
 
-      <div class="card">
-        <div class="card-header">Lists in HTML</div>
-        <div class="card-body">
+      <div style="flex:1; border:1px solid #ddd; border-radius:4px; overflow:hidden; background:#fafafa;">
+        <div style="background:#2f6fa3; color:#fff; padding:10px; font-weight:bold;">
+          Lists in HTML
+        </div>
+        <div style="padding:12px; font-size:14px;">
           <p>Learn how to create lists in HTML.</p>
           <ul>
             <li>Ordered Lists</li>
@@ -114,57 +60,59 @@
           </ul>
         </div>
       </div>
+
     </div>
 
+    <h2 style="font-size:20px; margin-bottom:15px;">
+      Types of Lists
+    </h2>
 
+    <!-- Second Row -->
+    <div style="display:flex; gap:20px; margin-bottom:30px;">
 
-
-
-
-
-
-
-
-    <h2 class="section-title">Types of Lists</h2>
-
-    <div class="row">
-      <div class="card">
-        <div class="card-header">Ordered List</div>
-        <div class="card-body">
+      <div style="flex:1; border:1px solid #ddd; border-radius:4px; overflow:hidden; background:#fafafa;">
+        <div style="background:#2f6fa3; color:#fff; padding:10px; font-weight:bold;">
+          Ordered List
+        </div>
+        <div style="padding:12px; font-size:14px;">
           <p>An ordered list uses numbers:</p>
-          <code>
-&lt;ol&gt;
-  &lt;li&gt;First item&lt;/li&gt;
-  &lt;li&gt;Second item&lt;/li&gt;
-  &lt;li&gt;Third item&lt;/li&gt;
+          <code style="display:block; background:#eee; padding:6px; border-radius:3px; font-family:Consolas, monospace;">
+&lt;ol&gt;<br>
+&nbsp;&nbsp;&lt;li&gt;First item&lt;/li&gt;<br>
+&nbsp;&nbsp;&lt;li&gt;Second item&lt;/li&gt;<br>
+&nbsp;&nbsp;&lt;li&gt;Third item&lt;/li&gt;<br>
 &lt;/ol&gt;
           </code>
         </div>
       </div>
 
-      <div class="card">
-        <div class="card-header">Unordered List</div>
-        <div class="card-body">
+      <div style="flex:1; border:1px solid #ddd; border-radius:4px; overflow:hidden; background:#fafafa;">
+        <div style="background:#2f6fa3; color:#fff; padding:10px; font-weight:bold;">
+          Unordered List
+        </div>
+        <div style="padding:12px; font-size:14px;">
           <p>An unordered list uses bullet points:</p>
-          <code>
-&lt;ul&gt;
-  &lt;li&gt;Apple&lt;/li&gt;
-  &lt;li&gt;Banana&lt;/li&gt;
-  &lt;li&gt;Cherry&lt;/li&gt;
+          <code style="display:block; background:#eee; padding:6px; border-radius:3px; font-family:Consolas, monospace;">
+&lt;ul&gt;<br>
+&nbsp;&nbsp;&lt;li&gt;Apple&lt;/li&gt;<br>
+&nbsp;&nbsp;&lt;li&gt;Banana&lt;/li&gt;<br>
+&nbsp;&nbsp;&lt;li&gt;Cherry&lt;/li&gt;<br>
 &lt;/ul&gt;
           </code>
         </div>
       </div>
-    </div> 
 
-
-
-
-
-
-    <div class="footer">
-      <a href="http://127.0.0.1:3000/INTRO/websiteP2.html?serverWindowId=6eb29755-76b9-4870-ae69-95ee0dd6b488" class="button">Next: Learn About Lists →</a>
     </div>
+
+    <!-- Footer -->
+    <div style="text-align:right; margin-top:20px;">
+      <a href="http://127.0.0.1:3000/INTRO/websiteP2.html?serverWindowId=6eb29755-76b9-4870-ae69-95ee0dd6b488"
+         style="background:#2f6fa3; color:#fff; padding:10px 14px; text-decoration:none; border-radius:4px; font-size:14px;">
+        Next: Learn About Lists →
+      </a>
+    </div>
+
   </div>
+
 </body>
 </html>
