--- a/INTRO/websiteP2.html
+++ b/INTRO/websiteP2.html
@@ -3,112 +3,31 @@
 <head>
   <meta charset="UTF-8">
   <title>HTML Lists: Ordered and Unordered</title>
-  <style>
-    .container {
-      max-width: 900px;
-      margin: auto;
-      background: #ffffff;
-      border-radius: 4px;
-      padding: 20px;
-    }
-
-    .page-header {
-      background: #3a76b3;
-      color: #fff;
-      padding: 12px 16px;
-      font-size: 22px;
-      font-weight: bold;
-      border-radius: 4px 4px 0 0;
-    }
-
-    .subtitle {
-      color: #555;
-      margin: 15px 0 25px;
-    }
-
-    .row {
-      display: flex;
-      gap: 20px;
-      margin-bottom: 25px;
-    }
-
-    .card {
-      flex: 1;
-      border: 1px solid #ddd;
-      border-radius: 4px;
-      background: #fafafa;
-    }
-
-    .card-title {
-      font-weight: bold;
-      padding: 12px;
-      border-bottom: 1px solid #ddd;
-    }
-
-    .card-body {
-      padding: 12px;
-      font-size: 14px;
-    }
-
-    .code-box {
-      background: #eef2f5;
-      padding: 10px;
-      border-radius: 4px;
-      margin: 10px 0;
-      font-family: Consolas, monospace;
-      font-size: 13px;
-      color: #1a4c7a;
-    }
-
-    .preview {
-      border-top: 1px solid #ddd;
-      padding-top: 10px;
-      margin-top: 10px;
-    }
-
-    .section-title {
-      font-weight: bold;
-      margin-top: 30px;
-      margin-bottom: 10px;
-    }
-
-    .summary {
-      border-top: 1px solid #ddd;
-      padding-top: 15px;
-      color: #444;
-    }
-
-    .footer {
-      margin-top: 25px;
-    }
-
-    .back-button {
-      display: inline-block;
-      background: #3a76b3;
-      color: #fff;
-      padding: 10px 14px;
-      text-decoration: none;
-      border-radius: 4px;
-      font-size: 14px;
-    }
-  </style>
 </head>
-<body>
 
-  <div class="container">
-    <div class="page-header">HTML Lists: Ordered and Unordered</div>
+<body style="margin:0; font-family: Arial, sans-serif; background:#f4f4f4;">
 
-    <p class="subtitle">
+  <div style="max-width:900px; margin:auto; background:#ffffff; border-radius:4px; padding:20px;">
+
+    <div style="background:#3a76b3; color:#fff; padding:12px 16px; font-size:22px; font-weight:bold; border-radius:4px 4px 0 0;">
+      HTML Lists: Ordered and Unordered
+    </div>
+
+    <p style="color:#555; margin:15px 0 25px;">
       Understand the differences between ordered and unordered lists in HTML.
     </p>
 
-    <div class="row">
-      <div class="card">
-        <div class="card-title">Ordered Lists</div>
-        <div class="card-body">
+    <div style="display:flex; gap:20px; margin-bottom:25px;">
+
+      <!-- Ordered List Card -->
+      <div style="flex:1; border:1px solid #ddd; border-radius:4px; background:#fafafa;">
+        <div style="font-weight:bold; padding:12px; border-bottom:1px solid #ddd;">
+          Ordered Lists
+        </div>
+        <div style="padding:12px; font-size:14px;">
           <p>Ordered lists display items in a specific sequence:</p>
 
-          <div class="code-box">
+          <div style="background:#eef2f5; padding:10px; border-radius:4px; margin:10px 0; font-family:Consolas, monospace; font-size:13px; color:#1a4c7a;">
             &lt;ol&gt;<br>
             &nbsp;&nbsp;&lt;li&gt;First item&lt;/li&gt;<br>
             &nbsp;&nbsp;&lt;li&gt;Second item&lt;/li&gt;<br>
@@ -116,7 +35,7 @@
             &lt;/ol&gt;
           </div>
 
-          <div class="preview">
+          <div style="border-top:1px solid #ddd; padding-top:10px; margin-top:10px;">
             <strong>Preview:</strong>
             <ol>
               <li>First item</li>
@@ -127,12 +46,15 @@
         </div>
       </div>
 
-      <div class="card">
-        <div class="card-title">Unordered Lists</div>
-        <div class="card-body">
+      <!-- Unordered List Card -->
+      <div style="flex:1; border:1px solid #ddd; border-radius:4px; background:#fafafa;">
+        <div style="font-weight:bold; padding:12px; border-bottom:1px solid #ddd;">
+          Unordered Lists
+        </div>
+        <div style="padding:12px; font-size:14px;">
           <p>Unordered lists display items with bullet points:</p>
 
-          <div class="code-box">
+          <div style="background:#eef2f5; padding:10px; border-radius:4px; margin:10px 0; font-family:Consolas, monospace; font-size:13px; color:#1a4c7a;">
             &lt;ul&gt;<br>
             &nbsp;&nbsp;&lt;li&gt;Apple&lt;/li&gt;<br>
             &nbsp;&nbsp;&lt;li&gt;Banana&lt;/li&gt;<br>
@@ -140,7 +62,7 @@
             &lt;/ul&gt;
           </div>
 
-          <div class="preview">
+          <div style="border-top:1px solid #ddd; padding-top:10px; margin-top:10px;">
             <strong>Preview:</strong>
             <ul>
               <li>Apple</li>
@@ -150,16 +72,24 @@
           </div>
         </div>
       </div>
+
     </div>
 
-    <div class="section-title">Summary</div>
-    <div class="summary">
+    <div style="font-weight:bold; margin-top:30px; margin-bottom:10px;">
+      Summary
+    </div>
+
+    <div style="border-top:1px solid #ddd; padding-top:15px; color:#444;">
       Ordered lists are numbered. Unordered lists use bullet points.
     </div>
 
-    <div class="footer">
-      <a href="http://127.0.0.1:3000/INTRO/website.html?serverWindowId=6eb29755-76b9-4870-ae69-95ee0dd6b488" class="back-button">← Back to HTML Basics</a>
+    <div style="margin-top:25px;">
+      <a href="http://127.0.0.1:3000/INTRO/website.html?serverWindowId=6eb29755-76b9-4870-ae69-95ee0dd6b488"
+         style="display:inline-block; background:#3a76b3; color:#fff; padding:10px 14px; text-decoration:none; border-radius:4px; font-size:14px;">
+        ← Back to HTML Basics
+      </a>
     </div>
+
   </div>
 
 </body>
