--- a/with CSS/Selectors/index.html
+++ b/with CSS/Selectors/index.html
@@ -11,7 +11,7 @@
         h1.head2{
             color: rgb(100, 237, 180);
         }
-        #h1{
+        #h1{            
             color: brown;
         }
     </style>
@@ -19,7 +19,10 @@
 </head>
 <body>
 
-    <!-- WE have 3 selsectors
+    <!-- 
+    (#h1) to use id  
+    ----------------------
+    WE have 3 selsectors
      class  ,  id , element(tag name )-->
 
      <h1 class="head1" id="h1">Mani Kant R.</h1>
